--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
     </div>
 
     <div class="landing-effect">
-       
-
+        <h1 class="rev-block">
+            <span>Front-end</span>
+          </h1>
+          <h1 class="rev-block onemore">
+            <span>Design</span>
+          </h1>
     </div>
 </div>
 
