--- a/index.html
+++ b/index.html
@@ -66,9 +66,15 @@
 
 
 
-<div class="about-me">
+<div class="about-me" id="About">
     <div class="about-me-headings">
-
+        <h1>About me</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia vitae ullam quam possimus qui maxime omnis dolorem perspiciatis magnam, architecto adipisci accusamus inventore, quos provident? Ad neque inventore excepturi nobis odit illo. Optio nesciunt, totam explicabo voluptatum provident nulla nemo atque magnam consequatur temporibus neque possimus, minus earum quasi rem quidem expedita mollitia nostrum, reiciendis asperiores fugit quas rerum! Suscipit iusto error porro quasi eaque animi obcaecati ducimus labore, eligendi qui placeat natus esse expedita nemo rem, non quae, similique voluptate accusantium sunt soluta in magni cumque. Dolorem magni, eveniet molestiae commodi repudiandae aperiam non ab asperiores corporis autem impedit.</p>
+        <div class="experience">
+            <span>2+</span>
+            <p>Years of experience providing and experimenting with web technologies</p>
+        </div>
+     
     </div>
     
 </div>
